--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 </a>
               </span>
               <span class="link-block">
-                <a href="https://github.com/XiaoBin2001" class="external-link button is-normal is-rounded is-dark">
+                <a href="https://github.com/XiaoBin2001/GNS" class="external-link button is-normal is-rounded is-dark">
                   <span class="icon"><i class="fab fa-github"></i></span>
                   <span>Code</span>
                 </a>
@@ -317,7 +317,7 @@
     <div class="container">
       <div class="content has-text-centered">
         <a class="icon-link" href="https://github.com/XiaoBin2001"><i class="fas fa-file-pdf"></i></a>
-        <a class="icon-link" href="https://github.com/XiaoBin2001"><i class="fab fa-github"></i></a>
+        <a class="icon-link" href="https://github.com/XiaoBin2001/GNS"><i class="fab fa-github"></i></a>
       </div>
       <div class="columns is-centered">
         <div class="column is-8">
