--- a/index.html
+++ b/index.html
@@ -301,8 +301,25 @@
   </script>
 </section>
 
-
-
+  <section class="section">
+    <div class="container is-max-desktop">
+      <div class="columns is-centered has-text-centered">
+        <div class="column is-four-fifths">
+          <h2 class="title is-3">FastSplatting</h2>
+          <div class="content has-text-justified">
+            <video controls width="100%">
+              <source src="./static/videos/psnr_time.mp4" type="video/mp4">
+            </video>
+            <p>
+              Referencing the training acceleration tricks used in FastGS, we also provide a fast-training version for everyone to use, named FastSplatting. 
+              Compared to FastGS, our method achieves superior rendering quality with similar training time.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  
   <!-- BibTeX -->
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
